# AIRHOUND

./: .dockerignore  CMakeLists.txt  CMakeLists_simple.txt  ETHERNET_SETUP.md  README.md  docker-compose.yml  docker_README  docker_test.sh  test_middleware.sh  ubuntu_AND_instr_after_docker_README  ubuntu_README
config/: px4_params.yaml
launch/: test_with_dummy.launch.py
src/: dummy_yaw_publisher.cpp  yaw_controller_node.cpp
src/airhound_bringup/: CMakeLists.txt  package.xml
src/airhound_description/: CMakeLists.txt  package.xml
src/airhound_interfaces/: CMakeLists.txt  package.xml
src/airhound_offboard/: CMakeLists.txt  package.xml
src/airhound_ops/: CMakeLists.txt  package.xml
src/airhound_perception/: CMakeLists.txt  package.xml
src/airhound_sim/: CMakeLists.txt  package.xml
src/airhound_tracking/: CMakeLists.txt  package.xml
workspace/install/: local_setup.sh  setup.sh
workspace/install/offboard_control/lib/offboard_control/: dummy_yaw_publisher  simple_test_node
workspace/install/offboard_control/share/offboard_control/: local_setup.sh  package.sh  package.xml
workspace/install/offboard_control/share/offboard_control/launch/: offboard_yaw_demo.launch.py
workspace/launch/: simple_test.launch.py  test_local_no_px4.launch.py
workspace/log/: latest_build
workspace/src/: px4_simulator.cpp  simple_test_node.cpp  yaw_controller_node.cpp
ws_ros2/install/: local_setup.sh  setup.sh
ws_ros2/install/px4_msgs/share/px4_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
ws_ros2/install/px4_msgs/share/px4_msgs/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  px4_msgsConfig-version.cmake  px4_msgsConfig.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
ws_ros2/install/px4_msgs/share/px4_msgs/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
ws_ros2/install/px4_msgs/share/px4_msgs/msg/: ActionRequest.idl  ActionRequest.msg  ActuatorArmed.idl  ActuatorArmed.msg  ActuatorControlsStatus.idl  ActuatorControlsStatus.msg  ActuatorMotors.idl  ActuatorMotors.msg  ActuatorOutputs.idl  (+461 more)
ws_ros2/install/px4_ros_com/include/px4_ros_com/: frame_transforms.h
ws_ros2/install/px4_ros_com/lib/px4_ros_com/: debug_vect_advertiser  offboard_control  offboard_control.py  offboard_control_srv  sensor_combined_listener  vehicle_gps_position_listener
ws_ros2/install/px4_ros_com/share/px4_ros_com/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
ws_ros2/log/: latest_build
ws_ros2/src/airhound_perception/: package.xml  requirements-sim.txt  requirements.txt  setup.cfg  setup.py
ws_ros2/src/airhound_perception/airhound_perception/: detector_node.py  synthetic_camera.py  yolo_detector.py
ws_ros2/src/airhound_perception/config/: perception.yaml  perception_dev.yaml
ws_ros2/src/airhound_perception/env_hook/: airhound_perception_env.sh
ws_ros2/src/airhound_perception/launch/: perception.launch.py  record_bag.launch.py  synthetic_test.launch.py  system.launch.py
(+3588 files in other folders)
