<?xml version="1.0"?>
<package format="3">
  <name>airhound_perception</name>
  <version>0.0.1</version>
  <description>Perception node for AIRHOUND Yaw-to-Target. Subscribes to RealSense color images and publishes Detection2DArray and diagnostics.</description>

  <maintainer email="rylan@example.com">Rylan</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>vision_msgs</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>compressed_image_transport</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
